Client/css/style.css
@font-face {
    font-family: Ubuntu;
    src: url('Ubuntu-B.ttf');

}
html, body{
    margin:0;
    padding:0;
    height:99%;
    font-family: Ubuntu;
    -webkit-font-smoothing: antialiased;
}
body {
    overflow:hidden;
    background-color: #ffc194;
    padding: 10px;
    display:block;
}

.user-message {
    font-size: 20px;
    color: blue;
}

.white-container {
    background-color: white;
    border:1px solid #000000;
}

.soft-container {
    background-color: #ffdede;
    border:1px solid #939793;
}

.pale-container {
    background-color: cadetblue;
    border:1px solid #939793;
}
.stats {
    margin: 5px;
    border-bottom: 1px solid #EFF2F6;
    box-shadow: inset 0 3px 0 0 #AFBCC6
}
#main {
    display:flex;
    height: 100%;
}

#left-container {
    display: flex;
    flex-direction: column-reverse;
    width:25%;
    padding:10px;
    margin-right: 20px;
    border-radius: 10px;
}
#head-container {
    display:flex;
    height: 170px;
    margin-bottom: 10px;
    width: 900px;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;

}
#left-stats-container {
    width:35%;
    border-top-left-radius: 10px;
}

#title {
    width: 30%;
    margin: 5px;
    font-size: 60px;
    text-align: center;
    vertical-align: middle;
    line-height: 140px;

    border:2px outset #999;

    cursor: pointer;
}

#right-stats-container{
    width: 35%;
    border-top-right-radius: 10px;
}


#chat-input {
    height: 10%;
    margin-top: 10px;
    padding-top: 5px;
    padding-left: 15px;
    font-size: 50px;
    overflow-x: hidden;
    overflow-y: hidden;
    white-space: pre;
    display:inline;

}

#chatbox {
    height: 90%;
    display: flex;
    flex-direction: column;
    overflow-y: auto;
    justify-content: flex-end;
    flex-shrink: 0;
}

.chat-text {
    width: 97%;
    min-height: 60px;
    height: auto;
    margin: 5px;
    display: flex;
    overflow:hidden;
}

.icon-container {
    font-size: 10px;
    margin-left: 10px;
    margin-right: 10px;
    text-align: center;
    display:inline;
    padding-top: 4px;

}


.chat-icon {
    width: 35px;
    max-height: 35px;
}

#right-container {
    width:25%;
    margin-left: 20px;
}

#mid-container {
    width: 50%;

}

#stats-container {
    border:1px solid #000000;
    width: 900px;
    height: 100px;
    margin-bottom: 10px;
}
#footer {
    width: 900px;
    height: 30px;
    margin-top: 10px;
    text-align: center;
    border-bottom: 2px White solid;
    user-select: none;
}

